--- a/scss/4-pages/_home.scss
+++ b/scss/4-pages/_home.scss
@@ -93,7 +93,7 @@
                 margin-right: 1rem;
             }
 
-            &-buttons button {
+            &-buttons a {
                 margin-right: 1rem;
             }
         }
@@ -182,7 +182,8 @@
 //
 @media screen and (max-width: $resp-tablet) {
     .hero {
-        margin-top: 0;
+        margin-top: -1rem;
+        height: 80vh;
 
         &__header {
             font-size: 2.5rem;
@@ -227,7 +228,14 @@
                 &-buttons {
                     margin-bottom: 2rem;
                     display: flex;
-                    justify-content: center;
+
+                    & a:first-child {
+                        margin-right: 0.5rem;
+                    }
+
+                    & a:last-child {
+                        margin-left: 0.5rem;
+                    }
                 }
             }
         }
@@ -248,6 +256,16 @@
 
         &-btn {
             margin-bottom: 1.2rem;
+        }
+    }
+}
+
+@media screen and (max-width: $resp-phone) {
+    .mywork__card-desc-buttons {
+        justify-content: center;
+
+        & a {
+            margin-right: 0;
         }
     }
 }
